Data server using PouchDB as tutoriel demonstration OK

--- a/DataServer/serveur.html
+++ b/DataServer/serveur.html
@@ -3,8 +3,7 @@
 
 </head>
 <body>
-    <h1>Serveur local de données par LocalStorage</h1>
-    <script src="libs/pouchdb-6.3.4.min.js"></script>
+    <h1>LocalStorage Data server from raw as learning tutoriel/demonstration</h1>
     <script src="serveur.js"></script>
 </body>
 </html>
