--- a/DataServer/serveur.html
+++ b/DataServer/serveur.html
@@ -5,5 +5,9 @@
 <body>
     <h1>LocalStorage Data server from raw as learning tutoriel/demonstration</h1>
     <script src="serveur.js"></script>
+
+    <footer>
+        <strong> Copyright Monwoo 2017, service@monwoo.com, code by Miguel Monwoo </strong>
+    </footer>
 </body>
 </html>
