Ca avance, CORS OK, schema OK, AWS package/deploy script OK

--- a/ClientFrontend/index.html
+++ b/ClientFrontend/index.html
@@ -12,7 +12,10 @@
     <title>Testing AwsLamabda from Client frontend</title>
 </head>
 <body>
-    <h1> Testing AwsLamabda from Client frontend </h1>
+    <h1>
+        Testing AwsLamabda from Client frontend (Work under last
+        <a href='http://www.google.com/chrome'>Chrome</a>)
+    </h1>
     <!-- Qunit Html -->
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
